# DiscordBot

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  schema.sql
cmake/: Findlibpqxx.cmake
src/: command_handler.h  database.h  main.cpp  scheduler.h
src/commands/: command.h  eightball.h  ping.h  rps.h  schedule.h
src/games/: game_base.h  game_manager.h
src/games/rps/: rps.cpp  rps.h
